--- a/SoLieuCovid.html
+++ b/SoLieuCovid.html
@@ -14,6 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <title>Số Liệu Covid</title>
 </head>
     
@@ -24,8 +25,19 @@
         <div class="container">
             <div class="nav">
                 <a href="index.html" class="logo">
-                    C<i class="bx bxs-virus-block bx-tada"></i>VID TRACKER
+                   E-C<i class="bx bxs-virus-block bx-tada"></i>VID 19
                 </a>
+                <div class="inner-width">
+         
+                    <!--<i class="menu-toggle-btn fas fa-bars"></i>-->
+                    <nav class="navigation-menu">
+                      <a href="index.html"><i class="fas fa-home home"></i> Trang Chủ</a>
+                     <!-- <a href="#"><i class="fas fa-align-left about"></i> About</a>-->
+                      <a href="SoLieuCovid.html"><i class="fab fa-buffer works"></i> Số Liệu Covid</a>
+                      <a href="TinTucCovid.html"><i class="fas fa-users team"></i> Tin Tức Covid</a>
+                      <a href="Hoidap.html"><i class="fas fa-headset contact"></i> Hỏi Đáp Tin Tức</a>
+                    </nav>
+                  </div>
                 <div class="darkmode-switch" id="darkmode-switch">
                     <span>
                         <i class="bx bxs-moon"></i>
