--- a/TinTucCovid.html
+++ b/TinTucCovid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style1.css">
+    <!--<link rel="stylesheet" href="css/style1.css">-->
     <link rel="shortcur icon" href="./img/favicon.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -14,28 +14,37 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <title>Tin Tức Covid</title>
     <link rel="stylesheet" href="css/tintuc.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
-    <header>
-        <div class="inner-width">
-          <a href="#" class="logo"><img src="image/logo.png" alt=""></a>
-          <i class="menu-toggle-btn fas fa-bars"></i>
-          <nav class="navigation-menu">
-            <a href="index.html"><i class="fas fa-home home"></i> Trang Chủ</a>
-           <!-- <a href="#"><i class="fas fa-align-left about"></i> About</a>-->
-            <a href="SoLieuCovid.html"><i class="fab fa-buffer works"></i> Số Liệu Covid</a>
-            <a href="TinTucCovid.html"><i class="fas fa-users team"></i> Tin Tức Covid</a>
-            <a href="Hoidap.html"><i class="fas fa-headset contact"></i> Hỏi Đáp Tin Tức</a>
-          </nav>
+  <div class="nav-wrapper">
+    <div class="container">
+        <div class="nav">
+            <a href="index.html" class="logo">
+               E-C<i class="bx bxs-virus-block bx-tada"></i>VID 19
+            </a>
+            <div class="inner-width">
+     
+                <!--<i class="menu-toggle-btn fas fa-bars"></i>-->
+                <nav class="navigation-menu">
+                  <a href="index.html"><i class="fas fa-home home"></i> Trang Chủ</a>
+                 <!-- <a href="#"><i class="fas fa-align-left about"></i> About</a>-->
+                  <a href="SoLieuCovid.html"><i class="fab fa-buffer works"></i> Số Liệu Covid</a>
+                  <a href="TinTucCovid.html"><i class="fas fa-users team"></i> Tin Tức Covid</a>
+                  <a href="Hoidap.html"><i class="fas fa-headset contact"></i> Hỏi Đáp Tin Tức</a>
+                </nav>
+              </div>
+            <div class="darkmode-switch" id="darkmode-switch">
+                <span>
+                    <i class="bx bxs-moon"></i>
+                    <i class="bx bxs-sun"></i>
+                </span>
+            </div>
         </div>
-      </header>
-      <script type="text/javascript">
-        $(".menu-toggle-btn").click(function(){
-          $(this).toggleClass("fa-times");
-          $(".navigation-menu").toggleClass("active");
-        });
-      </script>
-      <div class="container">
+    </div>
+</div>
+
+      <div class="container1">
         <div class="card-content" style="display:none">
             <div class="card">
                 <div class="card-image"><img src="./Img1/1.jpg" alt=""></div>
@@ -169,6 +178,7 @@
           <li class="page-item next-page"><a href="" class="page-link">Next</a></li>-->
         </div>
     </div>
+
     <script type="text/javascript">
       function getPageList(totalPages, page, maxLength){
         function range(start, end){
@@ -196,7 +206,7 @@
       
       $(function(){
         var numberOfItems = $(".card-content .card").length;
-        var limitPerPage = 6; //How many card items visible per a page
+        var limitPerPage = 3; //How many card items visible per a page
         var totalPages = Math.ceil(numberOfItems / limitPerPage);
         var paginationSize = 7; //How many page elements visible in the pagination
         var currentPage;
